[project]
name = "pyflowdroid"
version = "0.2.0"
description = "Python wrapper to use FlowDroid APK analyzer."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Gustavo Viera López", email = "gvieralopez@gmail.com" }
]
keywords = ["apk", "flow analysis", "android"]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.4.1",
    "progressbar>=2.5",
    "beautifulsoup4>=4.11.1",
    "lxml>=4.8.0",
    "ruff>=0.15.6",
]

[project.urls]
Homepage = "https://github.com/gvieralopez/pyFlowDroid"
Repository = "https://github.com/gvieralopez/pyFlowDroid"

[dependency-groups]
dev = [
    "pytest>=7.1.1",
    "mypy>=0.941",
    "pytest-cov>=3.0.0",
    "pdbpp>=0.10.3",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins: Check variables shadowing
    "B",      # flake8-bugbear: Finds likely bugs and design problems
    "C",      # McCabe: Complexity checker to ensure maintainable code
    "E4",     # Pycodestyle: Line length, indentation, etc.
    "E7",     # Pycodestyle: Miscellaneous checks
    "E9",     # Pycodestyle: Syntax errors
    "F",      # Pyflakes: Unused imports, undefined variables, etc.
    "FIX",    # Avoid lines containing TODO tags
    "G",      # flake8-logging-format: Ensure logging messages follow best practices
    "I",      # Isort: Import sorting
    "LOG",    # flake8-logging: Use the logging module correctly
    "N",      # pep8-naming: Enforce naming conventions
    "PGH004", # Enforce specify the rule to avoid on noqa tags
    "PTH",    # flake8-use-pathlib: Enforces pathlib usage
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit: Identifies common security issues in code
    "T20",    # flake8-print: Avoids print in the code
]
ignore = [
    "S101", # Use of assert function
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T20"]  # Allow print statements on the scripts

[tool.mypy]
python_version = "3.10"
files = ["src", "scripts", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
extra_checks = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=80"
python_files = "tests.py test_*.py *_test.py"
pythonpath = "./src"
env_override_existing_values = 1
env_files = [".env.test"]
